tests/test191.rael
:a ?= "abc\
def"
log :a, sizeof :a

blame "This checks if the line counter changed"
